--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,10 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "dotenv": "^10.0.0",
+    "express": "^4.16.4",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
