Fix type script linter warnings in specs

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,7 +21,9 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "../utils/interfaces.ts",
+    "__tests__/*.ts"
   ],
   "exclude": [
     "node_modules",
