--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "i": "^0.3.6",
+    "moment": "^2.29.1",
+    "npm": "^7.16.0",
     "react": "^17.0.2",
+    "react-chrono": "^1.10.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vertical-timeline-component": "^3.3.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -44,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-vertical-timeline-component": "^3.0.0"
   }
 }
