--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "types": ["@emotion/react/types/css-prop"],
+    "baseUrl": "src",
     "target": "es5",
     "lib": [
       "dom",
