--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node src/index.ts",
+    "build": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
