--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "nodemon",
-    "start": "node src/index.ts",
-    "build": "npm install && cd ../frontend && npm install && npm run build"
+    "start": "node src/index.ts"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
