--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "start": "node backend/src/index.ts",
-    "build": "cd backend && npm run build"
+    "heroku-postbuild": "cd backend && npm install --only=prod && cd ../frontend && npm install --only=prod && npm run build"
   },
   "engines": {
     "node": ">=10.0.0"
