--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-vertical-timeline-component": "^3.0.0",
     "i": "^0.3.6",
     "moment": "^2.29.1",
     "npm": "^7.16.0",
@@ -51,9 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-vertical-timeline-component": "^3.0.0"
   }
 }
