--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "nodemon",
-    "start": "node src/index.ts"
+    "start": "node -r ts-node/register src/index.ts"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
