--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -40,7 +41,6 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "engines": {
