--- a/backend/package.json
+++ b/backend/package.json
@@ -15,14 +15,13 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "dev": "nodemon",
-    "start": "node -r ts-node/register src/index.ts"
+    "start": "node -r src/index.ts"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2",
-    "ts-node": "^9.1.1"
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -41,6 +40,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "engines": {
